--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* ------------------ estilos del header---------------*/
 .header {
     font-size: larger;
-    background-color: #4b6587; }
+    background-color: #008184; }
     .header__logo {
         font-size: 4rem;
         padding-left: 3.5rem; }
@@ -63,7 +63,7 @@
 /* ------------------ estilos de inicio---------------*/
 .consolas {
     background-color: rgba(255, 255, 255, 0.99);
-    padding: 5% 0; }
+    padding: 1% 0; }
     .consolas i {
       font-size: 5rem; }
       .consolas i:hover {
@@ -97,7 +97,7 @@ a {
 
 /* --------------- estilos del footer------------*/
 .footer {
-    background-color: #4b6587;
+    background-color: #008184;
     padding: 1rem 0;
     color: rgba(255, 255, 255, 0.99);
     text-align: center; }
@@ -130,7 +130,64 @@ a {
       width: 100%;
       font-size: small;
       padding-bottom: 5%; }
-
+/* ---------------------------------------------*/
     .ocultar {
         display: none;
     }
+/* ---------------------------------------------*/
+    .modal-contenedor {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.3);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: all .5s;
+      opacity: 0;
+      visibility: hidden;
+  }
+  
+  .modal-active {
+      opacity: 1;
+      visibility: visible;
+      z-index: 5;
+  }
+  
+  .modal-carrito {
+      position: relative;
+      background-color: white;
+      min-width: 500px;
+      padding: 20px;
+      margin-top: -100%;
+      transition: all .5s;
+      overflow: auto;
+      height: 90%;
+  }
+  
+  .modal-active .modal-carrito {
+      margin-top: 0;
+  }
+
+/*----------------*/
+.flex-row{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  padding: 0% 10%;
+  font-size: 1rem;
+}
+
+.flex-r-end {
+  display: flex;
+  justify-content: right;
+  padding: 2% 10%;
+  font-size: 1rem;
+}
+
+.btn-pagar{
+  display: flex;
+  justify-content: right;
+  padding: 2% 10%;
+}
