refactorizacion, se agregaron import y export, y se agrego eliminar elementos de uno a uno en el carrito

--- a/app/components/contact/contacto.html
+++ b/app/components/contact/contacto.html
@@ -14,7 +14,7 @@
     <!-- animate css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Hoja de estilos css -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../../public/css/style.css">
 </head>
 
 <body class="body">
@@ -22,7 +22,7 @@
         <!-- Menu de Navegación -->
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand header__logo" href="../index.html">
+                <a class="navbar-brand header__logo" href="../../../index.html">
                     <i class="bi bi-controller"></i>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -32,13 +32,13 @@
                 <div class="collapse navbar-collapse menu-end " id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html"> Juegos</a>
+                            <a class="nav-link" href="../../../index.html"> Juegos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Carrito</a>
+                            <a class="nav-link" href="../../../index.html">Carrito</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
