--- a/public/css/style.css
+++ b/public/css/style.css
@@ -224,3 +224,21 @@ a {
   .label-submit {
     width: 100%;
     font-size: smaller; } }
+
+
+    #button-to-top {
+      display: none;
+      position: fixed;
+      bottom: 20px;
+      right: 30px;
+      z-index: 99;
+      font-size: 20px;
+      border: white solid 2px;
+      outline: none;
+      background-color:#008184;
+      color: white;
+      cursor: pointer;
+      padding: 10px;
+      border-radius: 50px; }
+      #button-to-top:hover {
+        background-color: #555;
