Se agrego validacion a formulario de pagina de contacto y agrego sweet alert al simular envio envio

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -239,6 +239,9 @@ a {
       color: white;
       cursor: pointer;
       padding: 10px;
-      border-radius: 50px; }
-      #button-to-top:hover {
-        background-color: #555;
+      border-radius: 50px; 
+    }
+
+    #button-to-top:hover {
+      background-color: #555;
+    }
