--- a/app/components/contact/contacto.html
+++ b/app/components/contact/contacto.html
@@ -10,7 +10,9 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <link rel="shortcut icon" href="../images/controller.svg">
+    <link rel="shortcut icon" href="/public/images/controller.svg">
+    <!-- toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!-- animate css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Hoja de estilos css -->
@@ -22,7 +24,7 @@
         <!-- Menu de Navegación -->
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand header__logo" href="../../../index.html">
+                <a class="navbar-brand header__logo" href="/index.html">
                     <i class="bi bi-controller"></i>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -32,10 +34,10 @@
                 <div class="collapse navbar-collapse menu-end " id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="../../../index.html"> Juegos</a>
+                            <a class="nav-link" href="/index.html"> Juegos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../../index.html">Carrito</a>
+                            <a class="nav-link" href="/index.html">Carrito</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -64,23 +66,23 @@
                     </div>
                     <div class="mb-3">
                         <label for="phone" class="form-label">Teléfono</label>
-                        <input type="tel" class="form-control" id="phone" placeholder="Ingrese su número de teléfono" />
+                        <input type="tel" class="form-control" id="phone" placeholder="Ingrese su número de teléfono" required/>
                     </div>
 
                     <label> Asunto </label>
                     <div class="mb-3 form-check contact__reason-form">
                         <div>
-                            <input class="form-check-input" type="radio" name="reason" id="sales" />
+                            <input class="form-check-input" type="radio" name="reason" id="sales" required/>
                             <label class="form-check-label" for="sales"> Ventas </label>
                         </div>
                         <div>
-                            <input class="form-check-input" type="radio" name="reason" id="instalation" />
+                            <input class="form-check-input" type="radio" name="reason" id="instalation" required/>
                             <label class="form-check-label" for="instalation">
                                 Instalación
                             </label>
                         </div>
                         <div>
-                            <input class="form-check-input" type="radio" name="reason" id="support" />
+                            <input class="form-check-input" type="radio" name="reason" id="support" required/>
                             <label class="form-check-label" for="support"> Soporte </label>
                         </div>
                     </div>
@@ -89,7 +91,7 @@
                         <textarea class="form-control" id="comments" rows="3"></textarea>
                     </div>
                     <div class="contact__buttons">
-                        <button type="submit" class="btn btn-outline-primary">
+                        <button type="submit" id="btnSubmit" class="btn btn-outline-primary">
                             Enviar
                         </button>
                         <!-- Botón de Enviar nombre en formulario -->
@@ -111,10 +113,12 @@
             </div>
         </div>
     </div>
-    <script src="../js/index.js"></script>
+    <script src="./contact.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-</script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>  <!-- sweetalert -->
+
     <!------------------------ Pie de Pagina ----------------------->
     <footer class="footer">
         <div class="footer__row">
