--- a/app/components/contact/contacto.html
+++ b/app/components/contact/contacto.html
@@ -77,9 +77,7 @@
                         </div>
                         <div>
                             <input class="form-check-input" type="radio" name="reason" id="instalation" required/>
-                            <label class="form-check-label" for="instalation">
-                                Instalación
-                            </label>
+                            <label class="form-check-label" for="instalation">Instalación</label>
                         </div>
                         <div>
                             <input class="form-check-input" type="radio" name="reason" id="support" required/>
@@ -113,31 +111,30 @@
             </div>
         </div>
     </div>
+    <!------------------- Scripts JavaScript -------------------------------->
+    <script src="/app/components/suscription/suscription.js" type="module"></script>
+    <script src="/app/components/cart/utils/toast.js" type="module"></script>
     <script src="./contact.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>  <!-- sweetalert -->
+    </script>                                                                                   <!--- Bootstrap -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>     <!--- toastify --->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>                 <!-- sweetalert -->
+    <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.0/build/global/luxon.min.js"></script>  <!---- fechas ---->
 
-    <!------------------------ Pie de Pagina ----------------------->
+    <!------------------------ Pie de Pagina --------------------- --> -->
     <footer class="footer">
         <div class="footer__row">
-            <form class="footer__form">
+            <form id="suscription" class="footer__form">
                 <p class="label-submit"> Para recibir promociones e información:</p>
                 <input type="email" class="form-control" id="email" placeholder="Email">
-                <button type="submit" class="btn btn-outline-light btn-sm">Suscribirse</button>
+                <button id="btnSuscribirse" type="submit" class="btn btn-outline-light btn-sm">Suscribirse</button>
             </form>
             <div class="footer__social">
                 <!-- imagenes de redes sociales en pie de pagina-->
-                <a aria-label="Instagram" href="">
-                    <i class="bi bi-instagram"></i>
-                </a>
-                <a aria-label="Facebook" href="">
-                    <i class="bi bi-facebook"></i>
-                </a>
-                <a aria-label="Twitter" href="">
-                    <i class="bi bi-twitter"></i>
-                </a>
+                <a aria-label="Instagram" href=""> <i class="bi bi-instagram"> </i> </a>
+                <a aria-label="Facebook" href=""> <i class="bi bi-facebook"></i> </a>
+                <a aria-label="Twitter" href=""> <i class="bi bi-twitter"></i> </a>
             </div>
         </div>
         <div class="footer__firm">
