--- a/app/components/contact/contacto.html
+++ b/app/components/contact/contacto.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rodolfo</title>
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@300;900&family=Press+Start+2P&display=swap" rel="stylesheet">  
+    <title>Games RODO</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -24,8 +28,12 @@
         <!-- Menu de Navegación -->
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand header__logo" href="/index.html">
+                <a class="header__logo" href="/index.html">
                     <i class="bi bi-controller"></i>
+                    <div class="navBar__title">
+                        <label>GAMES</label>
+                        <label>RODO</label>
+                    </div>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -122,7 +130,7 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>                 <!-- sweetalert -->
     <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.0/build/global/luxon.min.js"></script>  <!---- fechas ---->
 
-    <!------------------------ Pie de Pagina --------------------- --> -->
+    <!------------------------ Pie de Pagina ----------------------->
     <footer class="footer">
         <div class="footer__row">
             <form id="suscription" class="footer__form">
