--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,177 +1,244 @@
 /* ------------------ estilos del header---------------*/
 .header {
-    font-size: larger;
-    background-color: #008184; }
-    .header__logo {
-        font-size: 4rem;
-        padding-left: 3.5rem; }
-      .header__logo:hover {
-        animation: pulse;
-        animation-duration: 3s;}
+  font-size: larger;
+  background-color: #008184;
+}
 
-    .menu-end {
-    justify-content: end; }
+.header__logo {
+  display: flex;
+  align-items: center;
+  font-size: 4rem;
+  padding-left: 3.5rem;
+}
 
-    .home {
-    height: 100%;
-    text-align: center;
+.header__logo:hover {
+  animation: pulse;
+  animation-duration: 3s;
+  color: rgba(255,255,255,.75);
+}
+
+.menu-end {
+  justify-content: end;
+}
+
+.home {
+  height: 100%;
+  text-align: center;
+}
+
+.navBar__title {
+  font-size: medium;
+  font-family: 'Press Start 2P';
+  display: flex;
+  flex-direction: column;
+  padding-left: 0.5em;
+  text-align: center;
 }
 
 /* ----------------- Products ---------------------*/
 .products {
-    border-radius: 5%;
-    text-align: center;
-    margin-bottom: 10%;
-    height: 95%; }
-    .products__info {
-      border-top: outset; }
-    .products__img {
-      width: 80%;
-      align-self: center;
-      padding: 5% 0; }
-      .products__img:hover {
-        transform: scale(1.1); }
-  
-  .card-title {
-    font-weight: bolder; }
-  
-  .card-text {
-    margin: 7%;
-    text-align: justify;
-    line-height: 0;
-    font-size: 0.8rem;
+  border-radius: 5%;
+  text-align: center;
+  margin-bottom: 10%;
+  height: 95%;
+}
+
+.products__info {
+  border-top: outset;
+}
+
+.products__img {
+  width: 80%;
+  align-self: center;
+  padding: 5% 0;
+}
+
+.products__img:hover {
+  transform: scale(1.1);
+}
+
+.card-title {
+  font-weight: bolder;
+}
+
+.card-text {
+  margin: 7%;
+  text-align: justify;
+  line-height: 0;
+  font-size: 0.8rem;
 }
 
 /* -------------------- Contact -----------------*/
 .section-contact {
-    padding-bottom: 3%; }
-  
-  .contact {
-    background-color: rgba(145, 140, 136, 0.2);
-    border-radius: 1rem;
-    padding: 3% 0; }
-    .contact__reason-form {
-      width: 100%; }
-    .contact__map {
-      display: flex;
-      text-align: center;
-      flex-direction: column;
-      justify-content: space-between; }
-  .map {
-    width: 100%; }
+  padding-bottom: 3%;
+}
+
+.contact {
+  background-color: rgba(145, 140, 136, 0.2);
+  border-radius: 1rem;
+  padding: 3% 0;
+}
+
+.contact__reason-form {
+  width: 100%;
+}
+
+.contact__map {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.map {
+  width: 100%;
+}
 
 /* ------------------ estilos de inicio---------------*/
 .consolas {
-    background-color: rgba(255, 255, 255, 0.99);
-    padding: 1% 0; }
-    .consolas i {
-      font-size: 5rem; }
-      .consolas i:hover {
-        transform: scale(1.5); }
+  background-color: rgba(255, 255, 255, 0.99);
+  padding: 1% 0;
+}
+
+.consolas i {
+  font-size: 5rem;
+}
+
+.consolas i:hover {
+  transform: scale(1.5);
+}
 
 /* -------------- estilos generales ------------*/
 a {
-    text-decoration: none;
-    color: rgba(255, 255, 255, 0.99); 
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.99);
 }
-  
-  .title-section {
-    color: rgba(255, 255, 255, 0.99);
-    font-size: xx-large;
-    text-shadow: -2px 0 black, 1px 0 black, 0 1px black, 0 -1px black;
-    text-align: center; }
-  
-  .sections {
-    margin: 3% 0; }
-  
-  .body {
-    background-color: rgba(145, 140, 136, 0.25); }
-  
-  .flex-evenly, .services, .contact__reason-form, .contact__buttons {
-    display: flex;
-    justify-content: space-evenly; }
-  
-  .flex-around, .consolas {
-    display: flex;
-    justify-content: space-around; }
+
+.title-section {
+  color: rgba(255, 255, 255, 0.99);
+  font-size: xx-large;
+  text-shadow: -2px 0 black, 1px 0 black, 0 1px black, 0 -1px black;
+  text-align: center;
+}
+
+.sections {
+  margin: 3% 0;
+}
+
+.body {
+  background-color: rgba(145, 140, 136, 0.25);
+}
+
+.flex-evenly,
+.services,
+.contact__reason-form,
+.contact__buttons {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.flex-around,
+.consolas {
+  display: flex;
+  justify-content: space-around;
+}
 
 /* --------------- estilos del footer------------*/
 .footer {
-    background-color: #008184;
-    padding: 1rem 0;
-    color: rgba(255, 255, 255, 0.99);
-    text-align: center; }
-    .footer__row {
-      width: 100%;
-      display: flex;
-      justify-content: space-around; }
-    .footer__form {
-      display: flex;
-      flex-direction: column; }
-      .footer__form input {
-        width: 100%;
-        height: 1.5rem;
-        margin-bottom: 5%; }
-    .footer__social {
-      display: flex;
-      text-align: center;
-      width: 50%;
-      list-style: none;
-      justify-content: flex-end;
-      font-size: 3em; }
-      .footer__social a {
-        margin-left: 1.5rem;
-        color: white; }
-        .footer__social a:hover {
-          color: rgba(255, 255, 255, 0.55); }
-    .footer__firm {
-      padding-top: 3%; }
-    .footer .label-submit {
-      width: 100%;
-      font-size: small;
-      padding-bottom: 5%; }
+  background-color: #008184;
+  padding: 1rem 0;
+  color: rgba(255, 255, 255, 0.99);
+  text-align: center;
+}
+
+.footer__row {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.footer__form {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__form input {
+  width: 100%;
+  height: 1.5rem;
+  margin-bottom: 5%;
+}
+
+.footer__social {
+  display: flex;
+  text-align: center;
+  width: 50%;
+  list-style: none;
+  justify-content: flex-end;
+  font-size: 3em;
+}
+
+.footer__social a {
+  margin-left: 1.5rem;
+  color: white;
+}
+
+.footer__social a:hover {
+  color: rgba(255, 255, 255, 0.55);
+}
+
+.footer__firm {
+  padding-top: 3%;
+}
+
+.footer .label-submit {
+  width: 100%;
+  font-size: small;
+  padding-bottom: 5%;
+}
+
 /* ---------------------------------------------*/
-    .ocultar {
-        display: none;
-    }
+.ocultar {
+  display: none;
+}
+
 /* ---------------------------------------------*/
-    .modal-contenedor {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      height: 100vh;
-      background-color: rgba(0, 0, 0, 0.3);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      transition: all .5s;
-      opacity: 0;
-      visibility: hidden;
-  }
-  
-  .modal-active {
-      opacity: 1;
-      visibility: visible;
-      z-index: 5;
-  }
-  
-  .modal-carrito {
-      position: relative;
-      background-color: white;
-      min-width: 60%;
-      padding: 3%;
-      margin-top: -100%;
-      transition: all .5s;
-      overflow: auto;
-      height: 90%;
-  }
-  
-  .modal-active .modal-carrito {
-      margin-top: 0;
-  }
+.modal-contenedor {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all .5s;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.modal-active {
+  opacity: 1;
+  visibility: visible;
+  z-index: 5;
+}
+
+.modal-carrito {
+  position: relative;
+  background-color: white;
+  min-width: 60%;
+  padding: 3%;
+  margin-top: -100%;
+  transition: all .5s;
+  overflow: auto;
+  height: 90%;
+}
+
+.modal-active .modal-carrito {
+  margin-top: 0;
+}
 
 /*----------------*/
-.flex-row{
+.flex-row {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
@@ -186,7 +253,7 @@ a {
   font-size: 0.90rem;
 }
 
-.btn-pagar{
+.btn-pagar {
   display: flex;
   justify-content: right;
   padding: 2% 10%;
@@ -198,50 +265,66 @@ a {
 
   /* media contact 480*/
   .contact__map {
-    padding-top: 15%; }
+    padding-top: 15%;
+  }
+
   /* media footer 480 */
   .footer__form {
-    width: 65%; }
+    width: 65%;
+  }
+
   .footer__row {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    height: 20%; }
+    height: 20%;
+  }
+
   .footer__social {
     display: flex;
     justify-content: center;
     margin-top: 5%;
-    font-size: 1.5rem; }
+    font-size: 1.5rem;
+  }
+
   .footer__firm {
     font-size: smaller;
-    padding: 5%; }
+    padding: 5%;
+  }
+
   .footer__form input {
-    height: 1.3rem; }
+    height: 1.3rem;
+  }
+
   .footer__form button {
     height: 1.5em;
-    line-height: 1em; }
+    line-height: 1em;
+  }
+
   .label-submit {
     width: 100%;
-    font-size: smaller; } }
+    font-size: smaller;
+  }
+}
 
 
-    #btnTop {
-      display: none;
-      position: fixed;
-      bottom: 20px;
-      right: 30px;
-      z-index: 99;
-      font-size: 20px;
-      border: white solid 2px;
-      outline: none;
-      background-color:#008184;
-      color: white;
-      cursor: pointer;
-      padding: 10px;
-      border-radius: 50px; 
-    }
+#btnTop {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 20px;
+  border: white solid 2px;
+  outline: none;
+  background-color: #008184;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 50px;
+}
 
-    #btnTop:hover {
-      background-color: #555;
-    }
+#btnTop:hover {
+  background-color: #555;
+}
